--- a/index.html
+++ b/index.html
@@ -16,28 +16,33 @@
     <main>
         <img src="/img/bag.png" alt="sacola de compras">
         <form action="">
-            <input type="text" placeholder="Digite o item que deseja adicionar">
-            <button>Salvar item</button>
+            <input id="input-item" type="text" placeholder="Digite o item que deseja adicionar">
+            <button id="adicionar-botao" >Salvar item</button>
         </form>
-        <h2>Lista de compras</h2>
-        <hr />
         <ul>
+            <h2>Lista de compras</h2>
+            <hr />
             <li>
-                <div>
-                    <div>
-                        <input type="checkbox">
+                <div class="item-lista-container">
+                    <div class="container-nome-compra" >
+                        <div class="checkbox-container">
+                            <label for="checkbox-1">
+                                <input type="checkbox" class="checkbox-input" id="checkbox-1">
+                                <div class="checkbox-customizado checked"></div>
+                            </label>
+                        </div>
                         <p>Queijo Minas</p>
                     </div>
                     <div>
-                        <button>
+                        <button class="botao-acao" >
                             <img src="/img/delete.svg" alt="deletar">
                         </button>
-                        <button>
+                        <button class="botao-acao">
                             <img src="/img/edit.svg" alt="editar">
                         </button>
                     </div>
                 </div>
-                <p>Segunda-feira (31/10/2022) às 08:30</p>
+                <p class="item-lista-texto">Segunda-feira (31/10/2022) às 08:30</p>
             </li>
         </ul>
     </main>
