--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <main>
         <img src="/img/bag.png" alt="sacola de compras">
         <form action="">
-            <input id="input-item" type="text" placeholder="Digite o item que deseja adicionar">
-            <button id="adicionar-botao" >Salvar item</button>
+            <input class="input-item" id="input-item" type="text" placeholder="Digite o item que deseja adicionar">
+            <button class="adicionar-botao" id="adicionar-item" >Salvar item</button>
         </form>
-        <ul>
+        <ul id="lista-de-compras">
             <h2>Lista de compras</h2>
             <hr />
             <li>
-                <div class="item-lista-container">
+                <div class="lista-item-container">
                     <div class="container-nome-compra" >
                         <div class="checkbox-container">
                             <label for="checkbox-1">
@@ -34,10 +34,10 @@
                         <p>Queijo Minas</p>
                     </div>
                     <div>
-                        <button class="botao-acao" >
+                        <button class="item-lista-button" >
                             <img src="/img/delete.svg" alt="deletar">
                         </button>
-                        <button class="botao-acao">
+                        <button class="item-lista-button">
                             <img src="/img/edit.svg" alt="editar">
                         </button>
                     </div>
@@ -46,6 +46,7 @@
             </li>
         </ul>
     </main>
+    <script src="scripts.js" ></script>
 </body>
 
 </html>
